--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
                 <li><a href="models.html">Models</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="ratings.html">Rate Us</a></li>
+
             </ul>
         </nav>
     </header>
