--- a/ratings.html
+++ b/ratings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuxeDrive - Contact Us</title>
+    <title>LuxeDrive - Rate Our Cars</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;700&display=swap');
 
@@ -73,7 +73,7 @@
             color: #ff6b6b;
         }
 
-        .contact-header {
+        .ratings-header {
             background: linear-gradient(135deg, #ff6b6b, #4ecdc4);
             color: white;
             text-align: center;
@@ -81,26 +81,26 @@
             margin-bottom: 4rem;
         }
 
-        .contact-header h1 {
+        .ratings-header h1 {
             font-family: 'Playfair Display', serif;
             font-size: 3.5rem;
             margin-bottom: 1rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
         }
 
-        .contact-header p {
+        .ratings-header p {
             font-size: 1.2rem;
             max-width: 600px;
             margin: 0 auto;
         }
 
-        .contact-content {
+        .ratings-content {
             max-width: 800px;
             margin: 4rem auto;
             padding: 0 20px;
         }
 
-        .contact-form {
+        .rating-form {
             background-color: white;
             padding: 2rem;
             border-radius: 10px;
@@ -118,9 +118,7 @@
             color: #333;
         }
 
-        input[type="text"],
-        input[type="email"],
-        textarea {
+        select, textarea {
             width: 100%;
             padding: 0.75rem;
             border: 1px solid #ddd;
@@ -129,9 +127,7 @@
             transition: border-color 0.3s ease, box-shadow 0.3s ease;
         }
 
-        input[type="text"]:focus,
-        input[type="email"]:focus,
-        textarea:focus {
+        select:focus, textarea:focus {
             outline: none;
             border-color: #4ecdc4;
             box-shadow: 0 0 0 2px rgba(78, 205, 196, 0.2);
@@ -140,6 +136,38 @@
         textarea {
             height: 150px;
             resize: vertical;
+        }
+
+        .rating {
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: flex-start;
+        }
+
+        .rating > input {
+            display: none;
+        }
+
+        .rating > label {
+            cursor: pointer;
+            width: 40px;
+            height: 40px;
+            margin-top: 10px;
+            background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23e3e3e3' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 76%;
+            transition: .3s;
+        }
+
+        .rating > input:checked ~ label,
+        .rating > input:checked ~ label ~ label {
+            background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23fcd93a' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+        }
+
+        .rating > input:not(:checked) ~ label:hover,
+        .rating > input:not(:checked) ~ label:hover ~ label {
+            background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23d8b11e' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
         }
 
         button {
@@ -162,28 +190,6 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
 
-        .contact-info {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            margin-top: 2rem;
-        }
-
-        .contact-info h2 {
-            color: #333;
-            margin-bottom: 1rem;
-            font-family: 'Playfair Display', serif;
-        }
-
-        .contact-info p {
-            margin-bottom: 0.5rem;
-        }
-
-        .contact-info strong {
-            color: #ff6b6b;
-        }
-
         footer {
             background-color: #1a1a1a;
             color: white;
@@ -193,7 +199,7 @@
         }
 
         @media (max-width: 768px) {
-            .contact-header h1 {
+            .ratings-header h1 {
                 font-size: 2.5rem;
             }
         }
@@ -212,44 +218,48 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="ratings.html">Rate Us</a></li>
-
             </ul>
         </nav>
     </header>
 
-    <section class="contact-header">
-        <h1>Contact Us</h1>
-        <p>We'd love to hear from you. Reach out for any inquiries or to schedule a test drive.</p>
+    <section class="ratings-header">
+        <h1>Rate Our Cars</h1>
+        <p>Your feedback drives our excellence. Share your LuxeDrive experience with us.</p>
     </section>
 
-    <main class="contact-content">
-        <form class="contact-form" action="#" method="POST">
+    <main class="ratings-content">
+        <form class="rating-form" action="#" method="POST">
             <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+                <label for="car-model">Select a model:</label>
+                <select id="car-model" name="car-model" required>
+                    <option value="">Choose a model</option>
+                    <option value="compact">LuxeDrive Compact</option>
+                    <option value="city">LuxeDrive City</option>
+                    <option value="e-mini">LuxeDrive E-Mini</option>
+                    <option value="executive">LuxeDrive Executive</option>
+                    <option value="family">LuxeDrive Family</option>
+                    <option value="sport">LuxeDrive Sport</option>
+                    <option value="pinnacle">LuxeDrive Pinnacle</option>
+                    <option value="majestic">LuxeDrive Majestic</option>
+                    <option value="velocity">LuxeDrive Velocity</option>
+                </select>
             </div>
             <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <label>Your rating:</label>
+                <div class="rating">
+                    <input type="radio" id="star5" name="rating" value="5" required><label for="star5"></label>
+                    <input type="radio" id="star4" name="rating" value="4" required><label for="star4"></label>
+                    <input type="radio" id="star3" name="rating" value="3" required><label for="star3"></label>
+                    <input type="radio" id="star2" name="rating" value="2" required><label for="star2"></label>
+                    <input type="radio" id="star1" name="rating" value="1" required><label for="star1"></label>
+                </div>
             </div>
             <div class="form-group">
-                <label for="subject">Subject:</label>
-                <input type="text" id="subject" name="subject" required>
+                <label for="review">Your review:</label>
+                <textarea id="review" name="review" placeholder="Share your experience with this model..." required></textarea>
             </div>
-            <div class="form-group">
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-            <button type="submit">Send Message</button>
+            <button type="submit">Submit Rating</button>
         </form>
-
-        <div class="contact-info">
-            <h2>Visit Our Showroom</h2>
-            <p><strong>Address:</strong> 123 Luxury Lane, Prestige City, PC 12345</p>
-            <p><strong>Phone:</strong> (555) 123-4567</p>
-            <p><strong>Email:</strong> info@luxedrive.com</p>
-            <p><strong>Hours:</strong> Monday - Friday: 9am - 7pm, Saturday: 10am - 5pm, Sunday: Closed</p>
-        </div>
     </main>
 
     <footer>
